--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "jest": "^24.9.0"
   },
   "dependencies": {
-    "mongoose": "^5.7.13"
+    "mongoose": "^5.7.13",
+    "uuid": "^3.3.3"
   }
 }
