--- a/package.json
+++ b/package.json
@@ -5,8 +5,11 @@
   "main": "index.js",
   "scripts": {
     "test": "jest --verbose --coverage",
-    "test:watch": "npm run test -- --watch",
+    "test:watch": "npm run test -- --watchAll",
     "lint": "eslint '**/*.js'"
+  },
+  "jest": {
+    "testEnvironment": "Node"
   },
   "author": "",
   "license": "ISC",
