please travis, accept my new property as penance

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "eslint '**/*.js'"
   },
   "jest": {
-    "testEnvironment": "Node"
+    "testEnvironment": "node"
   },
   "author": "",
   "license": "ISC",
